--- a/css/style.css
+++ b/css/style.css
@@ -18,5 +18,12 @@
     height: 400px;
     margin: 20px 0;
     border-radius: 5px;
-    border: 1px solid silver;
+}
+
+.navbar {
+  background-color: rgba(0,0,0,0.5);
+}
+
+.navbar-brand {
+  color: black;
 }
