--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
 }
 
 .navbar {
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0,0,0,1);
 }
 
 .navbar-brand {
@@ -32,3 +32,173 @@
   border: 1px solid black;
 
 }
+
+/*
+* Inspired by: https://dribbble.com/shots/1878348-Google-Now-3rd-Party-Apps
+*/
+
+@keyframes slide {
+    0%  {
+        transform: scale(0, 0) translateY(0);
+    }
+
+    15%, 70% {
+        transform: scale(1, 1) translateY(0);
+    }
+
+    90% {
+        transform: scale(1, 1) translateY(600%);
+    }
+
+    100% {
+        transform: scale(1, 1) translateY(600%);
+    }
+}
+
+@keyframes size {
+    0%, 15%  {
+        transform: scale(1, 0);
+    }
+
+    25%, 100% {
+        transform: scale(1, 1);
+    }
+}
+
+@keyframes zoom {
+    0%, 25%  {
+        transform: scale(0, 0);
+    }
+
+    35%, 100% {
+        transform: scale(1, 1);
+    }
+}
+
+html {
+    height: 100%;
+}
+
+body {
+  font-family: sans-serif;
+  font-size: 11px;
+  height: 100%;
+  margin: 0;
+  background: rgba(#ffffff, 0.99);
+}
+
+.wrap {
+    width: 400px;
+    height: 300px;
+    display: table;
+    overflow: hidden;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.apps {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+}
+#fanTitle {
+    font-size: 5em;
+    color: black;
+    box-shadow: 2px 2px 3px 1px rgba(0, 0, 0, .08);
+    display: inline-block;
+    margin: 0 10px;
+
+
+}
+
+.football {
+    width: 44px;
+    height: 45px;
+    background: url('https://cdn3.iconfinder.com/data/icons/school-icons-3/512/Football-512.png');
+    background-size: contain;
+    box-shadow: 2px 2px 3px 1px rgba(0, 0, 0, .08);
+    display: inline-block;
+    margin: 0 10px;
+
+    transform: scale(0, 0) translateY(0);
+
+    animation-name: slide;
+    animation-timing-function: ease;
+    animation-duration: 5s;
+    animation-iteration-count: 5s;
+
+    &:nth-child(2), &:nth-child(2) .top, &:nth-child(2) .fa {
+        animation-delay: .4s;
+    }
+    &:nth-child(3), &:nth-child(3) .top, &:nth-child(3) .fa {
+        animation-delay: .6s;
+    }
+    &:nth-child(4), &:nth-child(4) .top, &:nth-child(4) .fa {
+        animation-delay: .8s;
+    }
+    &:nth-child(5), &:nth-child(5) .top, &:nth-child(5) .fa {
+        animation-delay: 1s;
+    }
+}
+    .beer {
+    width: 44px;
+    height: 45px;
+    background: url('http://icons.iconarchive.com/icons/iconsmind/outline/512/Beer-icon.png');
+    background-size: contain;
+    box-shadow: 2px 2px 3px 1px rgba(0, 0, 0, .08);
+    display: inline-block;
+    margin: 0 10px;
+
+    transform: scale(0, 0) translateY(0);
+
+    animation-name: slide;
+    animation-timing-function: ease;
+    animation-duration: 5s;
+    animation-iteration-count: 5s;
+
+    &:nth-child(2), &:nth-child(2) .top, &:nth-child(2) .fa {
+        animation-delay: .4s;
+    }
+    &:nth-child(3), &:nth-child(3) .top, &:nth-child(3) .fa {
+        animation-delay: .6s;
+    }
+    &:nth-child(4), &:nth-child(4) .top, &:nth-child(4) .fa {
+        animation-delay: .8s;
+    }
+    &:nth-child(5), &:nth-child(5) .top, &:nth-child(5) .fa {
+        animation-delay: 1s;
+    }
+  }
+    .crowd {
+      width: 44px;
+      height: 45px;
+      background: url('https://d30y9cdsu7xlg0.cloudfront.net/png/8283-200.png');
+      background-size: contain;
+      box-shadow: 2px 2px 3px 1px rgba(0, 0, 0, .08);
+      display: inline-block;
+      margin: 0 10px;
+
+      transform: scale(0, 0) translateY(0);
+
+      animation-name: slide;
+      animation-timing-function: ease;
+      animation-duration: 5s;
+      animation-iteration-count: 5s;
+
+      &:nth-child(2), &:nth-child(2) .top, &:nth-child(2) .fa {
+          animation-delay: .4s;
+      }
+      &:nth-child(3), &:nth-child(3) .top, &:nth-child(3) .fa {
+          animation-delay: .6s;
+      }
+      &:nth-child(4), &:nth-child(4) .top, &:nth-child(4) .fa {
+          animation-delay: .8s;
+      }
+      &:nth-child(5), &:nth-child(5) .top, &:nth-child(5) .fa {
+          animation-delay: 1s;
+      }
+    }
